created base controllers and modal windows for activity data

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,7 +75,7 @@ hr {
 
 .fa-lg {
 	font-size: 3.0rem !important;
-	color: #0099cc;
+	color: #2b5464;
 }
 
 .icon-label {
@@ -87,7 +87,7 @@ hr {
 }
 
 #add-curriculum {
-  color: #0099cc;
+  color: #cc0000;
 }
 
 button {
