--- a/static/partials/activity-resources.html
+++ b/static/partials/activity-resources.html
@@ -7,6 +7,20 @@
 </head>
 
 <body>
+<div class="no-pad fixed">
+    <div class="modal-header">
+      <h3 class="modal-title">
+        Activity Resources
+        <button class="btn btn-warning pull-right" ng-click="cancel()">Close</button>
+      </h3>
+    </div>
+    <div class="modal-body">
+    BODY
+    </div>
+    <div class="modal-footer">
+    FOOTER
+    </div>
+  </div>
 </body>
 
 </html>
