--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -73,19 +73,19 @@
 								<div class="col-xs-1">
 									<span class="pull-right icon-pad-top">
 										<span ng-show="notEmpty('{{relationship.activity.video_url}}')">
-											<a href="{{relationship.activity.video_url}}" target="_blank" ><i class="fa fa-youtube-play fa-md" ng-mouseenter="videoLabel = true" ng-mouseleave="videoLabel = false"></i></a>
+											<a href="{{relationship.activity.video_url}}" target="_blank" ><i class="btn fa fa-youtube-play fa-btn" ng-mouseenter="videoLabel = true" ng-mouseleave="videoLabel = false"></i></a>
 										</span>
 										<span ng-show="notEmpty({{relationship.activity.materials}})">
 											<!-- TODO: Modal window with materials-->
-											<i class="fa fa-file-o fa-md" ng-mouseenter="materialsLabel = true" ng-mouseleave="materialsLabel = false" ng-click="activityMaterials()"></i>
+											<a><i class="btn fa fa-file-o fa-btn" ng-mouseenter="materialsLabel = true" ng-mouseleave="materialsLabel = false" ng-click="activityMaterials()"></i></a>
 										</span>
 										<span ng-show="notEmpty({{relationship.activity.resources}})">
 											<!-- TODO: Modal window with resources / helpful tips-->
-											<i class="btn fa fa-question-circle fa-btn" ng-mouseenter="resourcesLabel = true" ng-mouseleave="resourcesLabel = false" ng-click="activityResources()"></i>
+											<a><i class="btn fa fa-question-circle fa-btn" ng-mouseenter="resourcesLabel = true" ng-mouseleave="resourcesLabel = false" ng-click="activityResources()"></i></a>
 										</span>
 										<span ng-show="notEmpty({{relationship.activity.relationships}})">
 											<!-- TODO: Modal window with related activities. Can open in new window or jump to appropriate section-->
-											<i class="fa fa-plus fa-md" ng-mouseenter="relatedLabel = true" ng-mouseleave="relatedLabel = false" ng-click="relatedActivities()"></i>
+											<a><i class="btn fa fa-plus fa-btn" ng-mouseenter="relatedLabel = true" ng-mouseleave="relatedLabel = false" ng-click="relatedActivities()"></i></a>
 										</span>
 									</span>
 									<span ng-show="materialsLabel">Materials</span>
