--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,10 +25,6 @@ a {
   color: #0099cc;
 }
 
-ul, li {
-  list-style: none;
-}
-
 hr {
 	padding-left: -15px;
 	padding-right: -15px;
@@ -82,11 +78,7 @@ hr {
   color: #bbbbbb;
 }
 
-#add-activity {
-  color: #cc0000;
-}
-
-#add-curriculum {
+.add-object {
   color: #cc0000;
 }
 
@@ -102,7 +94,7 @@ button {
 .fa-btn:hover
 {
 	font-size: 3.0rem !important;
-	line-height: 1.5;
+  line-height: 1.1;
 }
 
 /* Modal window */
@@ -252,7 +244,7 @@ h4 {
   text-align: center;
 }
 
-.navbar li,a {
+.navbar a {
   text-align: left !important;
 }
 
@@ -270,6 +262,10 @@ h4 {
 
 .navbar-default .navbar-collapse {
   background: rgba(255, 255, 255, 0.85);
+}
+
+.navbar li {
+  list-style: none;
 }
 
 /* Footer */
@@ -292,8 +288,12 @@ h4 {
 }
 .footer-main li {
   line-height: 1.8em;
+}
+
+.footer-main li {
   list-style: none;
 }
+
 .footer-main .copyright {
   text-align: center;
   font-size: 1.2rem;
