--- a/static/partials/activity-resources.html
+++ b/static/partials/activity-resources.html
@@ -7,18 +7,22 @@
 </head>
 
 <body>
-<div class="no-pad fixed">
+  <div class="no-pad fixed">
     <div class="modal-header">
       <h3 class="modal-title">
-        Activity Resources
+        Helpful Hints
         <button class="btn btn-warning pull-right" ng-click="cancel()">Close</button>
       </h3>
     </div>
     <div class="modal-body">
-    BODY
-    </div>
-    <div class="modal-footer">
-    FOOTER
+      <ul>
+        <div ng-repeat="resource in resources">
+          <li><a href={{resource.url}} target="_blank">{{resource.name}}</a></li>
+        </div>
+      </ul>
+      <div class="row no-pad">
+        <i class="pull-right add-object btn fa fa-plus-circle fa-btn" ng-click="newResource()"></i>
+      </div>
     </div>
   </div>
 </body>
