--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -77,11 +77,11 @@
 										</span>
 										<span ng-show="notEmpty({{relationship.activity.materials}})">
 											<!-- TODO: Modal window with materials-->
-											<a><i class="btn fa fa-file-o fa-btn" ng-mouseenter="materialsLabel = true" ng-mouseleave="materialsLabel = false" ng-click="activityMaterials()"></i></a>
+											<a><i class="btn fa fa-file-o fa-btn" ng-mouseenter="materialsLabel = true" ng-mouseleave="materialsLabel = false" ng-click="activityMaterials(relationship.activity.materials, 'sm')"></i></a>
 										</span>
 										<span ng-show="notEmpty({{relationship.activity.resources}})">
 											<!-- TODO: Modal window with resources / helpful tips-->
-											<a><i class="btn fa fa-question-circle fa-btn" ng-mouseenter="resourcesLabel = true" ng-mouseleave="resourcesLabel = false" ng-click="activityResources()"></i></a>
+											<a><i class="btn fa fa-question-circle fa-btn" ng-mouseenter="resourcesLabel = true" ng-mouseleave="resourcesLabel = false" ng-click="activityResources(relationship.activity.resources, 'sm')"></i></a>
 										</span>
 										<span ng-show="notEmpty({{relationship.activity.relationships}})">
 											<!-- TODO: Modal window with related activities. Can open in new window or jump to appropriate section-->
@@ -90,15 +90,15 @@
 									</span>
 									<span ng-show="materialsLabel">Materials</span>
 									<span ng-show="videoLabel">View video</span>
-									<span ng-show="resourcesLabel">Helpful Hints</span>
+									<span ng-show="resourcesLabel">Hints</span>
 									<span ng-show="relatedLabel">Related activities</span>
 								</div>
 							</div>
 							<hr class="no-margin">
 						</div>
-						<div id="add-activity" class="container row">
+						<div class="container row">
 						<div class="col-xs-offset-10 col-xs-1">
-							<i class="pull-right btn fa fa-plus-circle fa-btn" ng-click="newActivity()"></i>
+							<i class="pull-right add-object btn fa fa-plus-circle fa-btn" ng-click="newActivity()"></i>
 						</div>
 						</div>
 					</accordion-group>
@@ -110,8 +110,8 @@
 		</accordion>
 	</div>
 
-<div id="add-curriculum" class="container">
-	<i class="pull-right btn fa fa-plus-circle fa-btn" ng-click="newCurriculum()"></i>
+<div class="container">
+	<i class="pull-right add-object btn fa fa-plus-circle fa-btn" ng-click="newCurriculum()"></i>
 </div>
 
 </div>
