--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -12,7 +12,7 @@
 	
 	<div class="container">
 		<h1>Curriculum list
-			<small class="pull-right">Filter: <input ng-model="query"></small>
+			<small class="pull-right"><input ng-model="query"> <i class="fa fa-search fa-md"></i></small>
 		</h1>
 	</div>
 
@@ -81,7 +81,7 @@
 										</span>
 										<span ng-show="notEmpty({{relationship.activity.resources}})">
 											<!-- TODO: Modal window with resources / helpful tips-->
-											<a><i class="btn fa fa-question-circle fa-btn" ng-mouseenter="resourcesLabel = true" ng-mouseleave="resourcesLabel = false" ng-click="activityResources(relationship.activity.resources, 'sm')"></i></a>
+											<a><i class="btn fa fa-question-circle fa-btn" ng-mouseenter="resourcesLabel = true" ng-mouseleave="resourcesLabel = false" ng-click="activityResources(relationship.activity.id, relationship.activity.resources, 'sm')"></i></a>
 										</span>
 										<span ng-show="notEmpty({{relationship.activity.relationships}})">
 											<!-- TODO: Modal window with related activities. Can open in new window or jump to appropriate section-->
@@ -90,7 +90,7 @@
 									</span>
 									<span ng-show="materialsLabel">Materials</span>
 									<span ng-show="videoLabel">View video</span>
-									<span ng-show="resourcesLabel">Hints</span>
+									<span ng-show="resourcesLabel">Helpful hints</span>
 									<span ng-show="relatedLabel">Related activities</span>
 								</div>
 							</div>
