edited API endpoints and front-end form and controllers to create new materials on an activity

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -118,6 +118,13 @@ button {
   width: 570px;
 }
 
+#new-resource-form .form-fixed-width {
+  width: 570px;
+}
+#new-material-form .form-fixed-width {
+  width: 570px;
+}
+
 /* Padding */
 .no-pad-top {
   padding-top: 0px;
