removed ng-repeater on errors

--- a/static/partials/new-curriculum.html
+++ b/static/partials/new-curriculum.html
@@ -62,7 +62,7 @@
 				<button class="btn btn-primary pull-right" ng-click="save()">Add Curriculum</button>
 				<br>
 				<br>
-				<p ng-repeat="(name, errs) in errors" class="alert alert-danger"><strong>{{ name }}</strong>: {{ errs.join(', ') }}</p>
+				<p> {{errors}}</p>
 			</form>
 		</div>
 	</div>
