made error messages on forms red

--- a/static/partials/new-activity.html
+++ b/static/partials/new-activity.html
@@ -66,7 +66,7 @@
 				<button class="btn btn-primary pull-right" ng-click="save()">Add Activity</button>
 				<br>
 				<br>
-				<p> {{errors}}</p>
+				<p class="error">{{errors}}</p>
 			</form>
 		</div>
 	</div>
