--- a/static/partials/new-curriculum.html
+++ b/static/partials/new-curriculum.html
@@ -62,7 +62,7 @@
 				<button class="btn btn-primary pull-right" ng-click="save()">Add Curriculum</button>
 				<br>
 				<br>
-				<p> {{errors}}</p>
+				<p class="error">{{errors}}</p>
 			</form>
 		</div>
 	</div>
