--- a/static/partials/new-resource.html
+++ b/static/partials/new-resource.html
@@ -32,7 +32,7 @@
 				<button class="btn btn-primary pull-right" ng-click="save()">Add Resource</button>
 				<br>
 				<br>
-				<p> {{errors}}</p>
+				<p class="error">{{errors}}</p>
 			</form>
 		</div>
 	</div>
