--- a/static/partials/new-tag.html
+++ b/static/partials/new-tag.html
@@ -39,7 +39,7 @@
 				<button class="btn btn-primary pull-right" ng-click="save()">Add Tag</button>
 				<br>
 				<br>
-				<p> {{errors}}</p>
+				<p class="error">{{errors}}</p>
 			</form>
 		</div>
 	</div>
