--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -17,7 +17,7 @@
 	</div>
 
 	<div class="container curr-list">
-		<accordion id="curr-accordion ng-cloak" close-others="oneAtATime">
+		<accordion id="curr-accordion" close-others="oneAtATime">
 			<div class="" ng-repeat="curriculum in curricula | filter:query">
 
 				<div class="row">
@@ -41,7 +41,7 @@
 							<img ng-src="{{tag.logo}}" alt="tag.name" class="img-thumbnail img-responsive">
 						</span>
 					</div>
-					<accordion-group id="activity-group ng-cloak" heading="Lessons">
+					<accordion-group id="activity-group" heading="Lessons">
 					<div ng-repeat="relationship in curriculum.activities">
 						<div class="row">
 							<div class="col-xs-offset-1 col-xs-2" ng-switch on="relationship.activity.category">
