removed empty class attribute

--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -18,7 +18,7 @@
 
 	<div class="container curr-list">
 		<accordion id="curr-accordion" close-others="oneAtATime">
-			<div class="" ng-repeat="curriculum in curricula | filter:query">
+			<div ng-repeat="curriculum in curricula | filter:query">
 
 				<div class="row">
 					<div class="col-xs-1 col-center icon-pad-top">
