edited api backend and frontend to associate new activity with the right curriculum

--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -105,7 +105,7 @@
 						</div>
 						<div class="container row">
 						<div class="col-xs-offset-10 col-xs-1">
-							<i class="pull-right add-object btn fa fa-plus-circle fa-btn" ng-click="newActivity()"></i>
+							<i class="pull-right add-object btn fa fa-plus-circle fa-btn" ng-click="newActivity(curriculum)"></i>
 						</div>
 						</div>
 					</accordion-group>
