fixed new activity form

--- a/static/partials/new-activity.html
+++ b/static/partials/new-activity.html
@@ -32,7 +32,7 @@
 				<div class="form-group">
 					<label class="sr-only" for="newActivityTags">Tags</label>
 					Add Tags (Hold down "Control", or "Command" on a Mac, to select more than one.)
-					<select class="form-control form-fixed-width" id="newActivityTags" ng-model="newActivity.tags" ng-options="tag.id as tag.name for tag in tags" multiple>
+					<select class="form-control form-fixed-width" id="newActivityTags" ng-model="newActivity.tag_IDs" ng-options="tag.id as tag.name for tag in tags" multiple>
 					</select>
 				</div>
 				<br>
