renamed image field on new-tag form from ng-model to my-file-model

--- a/static/partials/new-tag.html
+++ b/static/partials/new-tag.html
@@ -32,7 +32,7 @@
 				<br>
 				<div class="form-group">
 					<label class="sr-only" for="newTagLogo">Logo</label>
-					<input type="file" accept="image/*" class="form-control form-fixed-width" id="newTagLogo" ng-model="newTag.logo">
+					<input type="file" accept="image/*" class="form-control form-fixed-width" id="newTagLogo" my-file-model="newTag.logo">
 				</div>
 				<br>
 				<br>
