working on file upload

--- a/static/partials/new-tag.html
+++ b/static/partials/new-tag.html
@@ -35,6 +35,8 @@
 					<input type="file" accept="image/*" class="form-control form-fixed-width" id="newTagLogo" my-file-model="newTag.logo">
 				</div>
 				<br>
+				Image data: {{newTag.logo}}
+				<br>
 				<br>
 				<button class="btn btn-primary pull-right" ng-click="save()">Add Tag</button>
 				<br>
