added underscore js utility library and implemented tag image uploads

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,8 @@
 
 	<script src="{% static "js/angularUI/ui-bootstrap-tpls-0.12.1.js" %}"></script>
 
+	<script src="{% static "js/underscore-1.8.2.js" %}"></script>
+
 	<script src="{% static "js/api.js" %}"></script>
 	{% endblock %}
 	{% include "footer.html" %}
