update new-activity form to use my-file-model for image input

--- a/static/partials/new-activity.html
+++ b/static/partials/new-activity.html
@@ -59,7 +59,7 @@
 				<br>
 				<div class="form-group">
 					<label class="sr-only" for="newActivityImage">Image</label>
-					<input type="file" accept="image/*" class="form-control form-fixed-width" id="newActivityImage" ng-model="newActivity.image">
+					<input type="file" accept="image/*" class="form-control form-fixed-width" id="newActivityImage" my-file-model="newActivity.image">
 				</div>
 				<br>
 				<br>
