--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block ng_app %}lms.app.curricula{% endblock %}
+{% block ng_app %}lms.app{% endblock %}
 
 {% block content %}
 
@@ -130,11 +130,11 @@
 {% block js %}
 {{ block.super }}
 {% load staticfiles%}
-<script src="{% static "js/app.curricula.js" %}"></script>
+<script src="{% static "js/app.js" %}"></script>
 
 <script>
 	// Add the CSRF token
-	var app = angular.module('lms.app.curricula');
+	var app = angular.module('lms.app');
 	app.config(['$httpProvider', function($httpProvider) {
 		$httpProvider.defaults.headers.common['X-CSRFToken'] = '{{ csrf_token|escapejs }}';
 	}]);
