moved script tags to include angular project files into base.html template

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,8 +30,14 @@
 	<script src="{% static "js/angularUI/ui-bootstrap-tpls-0.12.1.js" %}"></script>
 
 	<script src="{% static "js/underscore-1.8.2.js" %}"></script>
-
-	<script src="{% static "js/api.js" %}"></script>
+	
+	<script src="{% static "js/app/app.js" %}"></script>
+	<script src="{% static "js/app/api.js" %}"></script>
+	<script src="{% static "js/app/controllers/controllers.js" %}"></script
+	<script src="{% static "js/app/controllers/activity-controller.js" %}"></script>
+	<script src="{% static "js/app/controllers/material-controller.js" %}"></script
+	<script src="{% static "js/app/controllers/resource-controller.js" %}"></script
+	<script src="{% static "js/app/controllers/tag-controller.js" %}"></script>
 	{% endblock %}
 	{% include "footer.html" %}
 </body>
