--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -130,7 +130,12 @@
 {% block js %}
 {{ block.super }}
 {% load staticfiles%}
-<script src="{% static "js/app.js" %}"></script>
+<script src="{% static "js/app/app.js" %}"></script>
+<script src="{% static "js/app/controllers/controllers.js" %}"></script>
+<script src="{% static "js/app/controllers/activity-controller.js" %}"></script>
+<script src="{% static "js/app/controllers/material-controller.js" %}"></script>
+<script src="{% static "js/app/controllers/resource-controller.js" %}"></script>
+<script src="{% static "js/app/controllers/tag-controller.js" %}"></script>
 
 <script>
 	// Add the CSRF token
