refactor angular app code

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,13 @@
 	<script src="{% static "js/underscore-1.8.2.js" %}"></script>
 
 	<script src="{% static "js/api.js" %}"></script>
+	<script src="{% static "js/directives/directives.js" %}"></script>
+	<script src="{% static "js/controllers/controllers.js" %}"></script>
+	<script src="{% static "js/controllers/resource-controllers.js" %}"></script>
+	<script src="{% static "js/controllers/material-controllers.js" %}"></script>
+	<script src="{% static "js/controllers/tag-controllers.js" %}"></script>
+	<script src="{% static "js/controllers/activity-controllers.js" %}"></script>
+	<script src="{% static "js/controllers/curriculum-controllers.js" %}"></script>
 	{% endblock %}
 	{% include "footer.html" %}
 </body>
