move all angular project files into app directory

--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -130,7 +130,7 @@
 {% block js %}
 {{ block.super }}
 {% load staticfiles%}
-<script src="{% static "js/app.js" %}"></script>
+<script src="{% static "js/app/app.js" %}"></script>
 
 <script>
 	// Add the CSRF token
