--- a/templates/base.html
+++ b/templates/base.html
@@ -31,14 +31,14 @@
 
 	<script src="{% static "js/underscore-1.8.2.js" %}"></script>
 
-	<script src="{% static "js/api.js" %}"></script>
-	<script src="{% static "js/directives/directives.js" %}"></script>
-	<script src="{% static "js/controllers/controllers.js" %}"></script>
-	<script src="{% static "js/controllers/resource-controllers.js" %}"></script>
-	<script src="{% static "js/controllers/material-controllers.js" %}"></script>
-	<script src="{% static "js/controllers/tag-controllers.js" %}"></script>
-	<script src="{% static "js/controllers/activity-controllers.js" %}"></script>
-	<script src="{% static "js/controllers/curriculum-controllers.js" %}"></script>
+	<script src="{% static "js/app/api.js" %}"></script>
+	<script src="{% static "js/app/directives/directives.js" %}"></script>
+	<script src="{% static "js/app/controllers/controllers.js" %}"></script>
+	<script src="{% static "js/app/controllers/resource-controllers.js" %}"></script>
+	<script src="{% static "js/app/controllers/material-controllers.js" %}"></script>
+	<script src="{% static "js/app/controllers/tag-controllers.js" %}"></script>
+	<script src="{% static "js/app/controllers/activity-controllers.js" %}"></script>
+	<script src="{% static "js/app/controllers/curriculum-controllers.js" %}"></script>
 	{% endblock %}
 	{% include "footer.html" %}
 </body>
