move angular app files from base.html to curriculum-list.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,7 @@
 	<script src="{% static "js/app/controllers/tag-controllers.js" %}"></script>
 	<script src="{% static "js/app/controllers/activity-controllers.js" %}"></script>
 	<script src="{% static "js/app/controllers/curriculum-controllers.js" %}"></script>
+	<script src="{% static "js/app/app.js" %}"></script>
 	{% endblock %}
 	{% include "footer.html" %}
 </body>
