--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -130,7 +130,18 @@
 {% block js %}
 {{ block.super }}
 {% load staticfiles%}
-<script src="{% static "js/app/app.js" %}"></script>
+	<script src="{% static "js/app/app.js" %}"></script>
+
+	<script src="{% static "js/app/api.js" %}"></script>
+	
+	<script src="{% static "js/app/directives/directives.js" %}"></script>
+	
+	<script src="{% static "js/app/controllers/controllers.js" %}"></script>
+	<script src="{% static "js/app/controllers/resource-controllers.js" %}"></script>
+	<script src="{% static "js/app/controllers/material-controllers.js" %}"></script>
+	<script src="{% static "js/app/controllers/tag-controllers.js" %}"></script>
+	<script src="{% static "js/app/controllers/activity-controllers.js" %}"></script>
+	<script src="{% static "js/app/controllers/curriculum-controllers.js" %}"></script>
 
 <script>
 	// Add the CSRF token
