found typo in base.html - some angular app script tags missing ending > symbol

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,10 +34,11 @@
 
 	<script src="{% static "js/app/app.js" %}"></script>
 	<script src="{% static "js/app/api.js" %}"></script>
+	<script src="{% static "js/app/controllers/controllers.js" %}"></script>
 	<script src="{% static "js/app/controllers/tag-controller.js" %}"></script>
 	<script src="{% static "js/app/controllers/activity-controller.js" %}"></script>
-	<script src="{% static "js/app/controllers/material-controller.js" %}"></script
-	<script src="{% static "js/app/controllers/resource-controller.js" %}"></script
+	<script src="{% static "js/app/controllers/material-controller.js" %}"></script>
+	<script src="{% static "js/app/controllers/resource-controller.js" %}"></script>
 	
 	<script src="{% static "js/app/controllers/controllers.js" %}"></script
 
