--- a/templates/base.html
+++ b/templates/base.html
@@ -34,14 +34,17 @@
 
 	<script src="{% static "js/app/app.js" %}"></script>
 	<script src="{% static "js/app/api.js" %}"></script>
-	<script src="{% static "js/app/controllers/controllers.js" %}"></script>
-	<script src="{% static "js/app/controllers/tag-controller.js" %}"></script>
-	<script src="{% static "js/app/controllers/activity-controller.js" %}"></script>
-	<script src="{% static "js/app/controllers/material-controller.js" %}"></script>
-	<script src="{% static "js/app/controllers/resource-controller.js" %}"></script>
 	
-	<script src="{% static "js/app/controllers/controllers.js" %}"></script
+	<script src="{% static "js/app/directives.js" %}"></script>
 
+	<script src="{% static "js/app/services.js" %}"></script>
+	
+	<script src="{% static "js/app/controllers/controllers.js" %}"></script>
+	<script src="{% static "js/app/controllers/curriculum-controllers.js" %}"></script>
+	<script src="{% static "js/app/controllers/tag-controllers.js" %}"></script>
+	<script src="{% static "js/app/controllers/activity-controllers.js" %}"></script>
+	<script src="{% static "js/app/controllers/material-controllers.js" %}"></script>
+	<script src="{% static "js/app/controllers/resource-controllers.js" %}"></script>
 	
 	{% endblock %}
 	{% include "footer.html" %}
