fixed a few merge conflicts

--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -130,12 +130,13 @@
 {% block js %}
 {{ block.super }}
 {% load staticfiles%}
-<<<<<<< HEAD
 	<script src="{% static "js/app/app.js" %}"></script>
 
 	<script src="{% static "js/app/api.js" %}"></script>
 	
 	<script src="{% static "js/app/directives/directives.js" %}"></script>
+
+	<script src="{% static "js/app/services/services.js" %}"></script>
 	
 	<script src="{% static "js/app/controllers/controllers.js" %}"></script>
 	<script src="{% static "js/app/controllers/resource-controllers.js" %}"></script>
@@ -143,8 +144,6 @@
 	<script src="{% static "js/app/controllers/tag-controllers.js" %}"></script>
 	<script src="{% static "js/app/controllers/activity-controllers.js" %}"></script>
 	<script src="{% static "js/app/controllers/curriculum-controllers.js" %}"></script>
-=======
->>>>>>> activity-images
 
 <script>
 	// Add the CSRF token
