add autofocus to new object forms

--- a/static/partials/new-activity.html
+++ b/static/partials/new-activity.html
@@ -19,7 +19,7 @@
 			<form id="new-activity-form" class="form-inline">
 				<div class="form-group">
 					<label class="sr-only" for="newActivityName">Name</label>
-					<input type="text" class="form-control form-fixed-width" id="newActivityName" ng-model="newActivity.name" placeholder="Name">
+					<input type="text" class="form-control form-fixed-width" id="newActivityName" ng-model="newActivity.name" placeholder="Name" autofocus>
 				</div>
 				<br>
 				<br>
