--- a/static/partials/new-curriculum.html
+++ b/static/partials/new-curriculum.html
@@ -19,7 +19,7 @@
 			<form id="new-curr-form" class="form-inline">
 				<div class="form-group">
 					<label class="sr-only" for="newCurriculumName">Name</label>
-					<input type="text" class="form-control form-fixed-width" id="newCurriculumName" ng-model="newCurriculum.name" placeholder="Name">
+					<input type="text" class="form-control form-fixed-width" id="newCurriculumName" ng-model="newCurriculum.name" placeholder="Name" autofocus>
 				</div>
 				<br>
 				<br>
