--- a/static/partials/new-resource.html
+++ b/static/partials/new-resource.html
@@ -19,7 +19,7 @@
 			<form id="new-resource-form" class="form-inline">
 				<div class="form-group">
 					<label class="sr-only" for="newResourceName">Name</label>
-					<input type="text" class="form-control form-fixed-width" id="newResourceName" ng-model="newResource.name" placeholder="Name">
+					<input type="text" class="form-control form-fixed-width" id="newResourceName" ng-model="newResource.name" placeholder="Name" autofocus>
 				</div>
 				<br>
 				<br>
