--- a/static/partials/new-tag.html
+++ b/static/partials/new-tag.html
@@ -19,7 +19,7 @@
 			<form id="new-material-form" class="form-inline">
 				<div class="form-group">
 					<label class="sr-only" for="newTagName">Name</label>
-					<input type="text" class="form-control form-fixed-width" id="newTagName" ng-model="newTag.name" placeholder="Name">
+					<input type="text" class="form-control form-fixed-width" id="newTagName" ng-model="newTag.name" placeholder="Name" autofocus>
 				<br>
 				<br>
 				<div class="form-group">
