--- a/static/partials/new-material.html
+++ b/static/partials/new-material.html
@@ -19,7 +19,7 @@
 			<form id="new-material-form" class="form-inline">
 				<div class="form-group">
 					<label class="sr-only" for="newMaterialName">Name</label>
-					<input type="text" class="form-control form-fixed-width" id="newMaterialName" ng-model="newMaterial.name" placeholder="Name">
+					<input type="text" class="form-control form-fixed-width" id="newMaterialName" ng-model="newMaterial.name" placeholder="Name" autofocus>
 				</div>
 				<br>
 				<br>
