show resources and hints for all activities

--- a/static/partials/new-resource.html
+++ b/static/partials/new-resource.html
@@ -10,7 +10,7 @@
 	<div class="no-pad fixed">
 		<div class="modal-header">
 			<h3 class="modal-title">
-				Create New Resource
+				Create New Hint
 				<button class="btn btn-warning pull-right" ng-click="cancel()">Cancel</button>
 			</h3>
 
@@ -25,7 +25,7 @@
 				<br>
 				<div class="form-group">
 					<label class="sr-only" for="newResourceURL">Resource URL</label>
-					<input type="url" class="form-control form-fixed-width" id="newResourceURL" ng-model="newResource.url" placeholder="Resource URL">
+					<input type="url" class="form-control form-fixed-width" id="newResourceURL" ng-model="newResource.url" placeholder="URL">
 				</div>
 				<br>
 				<br>
