--- a/static/partials/new-material.html
+++ b/static/partials/new-material.html
@@ -25,7 +25,7 @@
 				<br>
 				<div class="form-group">
 					<label class="sr-only" for="newMaterialURL">Material URL</label>
-					<input type="url" class="form-control form-fixed-width" id="newMaterialURL" ng-model="newMaterial.url" placeholder="Material URL">
+					<input type="url" class="form-control form-fixed-width" id="newMaterialURL" ng-model="newMaterial.url" placeholder="URL">
 				</div>
 				<br>
 				<br>
