--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -77,15 +77,15 @@
 										<span ng-show="notEmpty('{{relationship.activity.video_url}}')">
 											<a href="{{relationship.activity.video_url}}" target="_blank" ><i class="btn fa fa-youtube-play fa-btn" ng-mouseenter="videoLabel = true" ng-mouseleave="videoLabel = false"></i></a>
 										</span>
-										<span ng-show="notEmpty({{relationship.activity.materials}})">
+										<span>
 											<!-- Open modal window with materials-->
 											<a><i class="btn fa fa-file-o fa-btn" ng-mouseenter="materialsLabel = true" ng-mouseleave="materialsLabel = false" ng-click="activityMaterials(relationship.activity.id, relationship.activity.materials, 'sm')"></i></a>
 										</span>
-										<span ng-show="notEmpty({{relationship.activity.resources}})">
+										<span>
 											<!-- Open modal window with resources / helpful tips-->
 											<a><i class="btn fa fa-question-circle fa-btn" ng-mouseenter="resourcesLabel = true" ng-mouseleave="resourcesLabel = false" ng-click="activityResources(relationship.activity.id, relationship.activity.resources, 'sm')"></i></a>
 										</span>
-										<span ng-show="notEmpty({{relationship.activity.relationships}})">
+										<span>
 											<!-- TODO: Modal window with related activities. Can open in new window or jump to appropriate section-->
 											<a><i class="btn fa fa-plus fa-btn" ng-mouseenter="relatedLabel = true" ng-mouseleave="relatedLabel = false" ng-click="relatedActivities()"></i></a>
 										</span>
