--- a/static/partials/new-activity.html
+++ b/static/partials/new-activity.html
@@ -28,6 +28,8 @@
 					Add Tags (Hold down "Control", or "Command" on a Mac, to select more than one.)
 					<select class="form-control form-fixed-width" id="newActivityTags" ng-model="newActivity.tag_IDs" ng-options="tag.id as tag.name for tag in tags" multiple>
 					</select>
+					<i class="add-object btn fa fa-plus-circle fa-btn no-pad" id="new-tag" ng-mouseenter="newTagLabel = true" ng-mouseleave="newTagLabel = false" ng-click="newTag()"></i>
+					<span ng-show="newTagLabel">Add new tag</span>
 				</div>
 				<br>
 				<br>
