--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -29,12 +29,15 @@
 					</div>
 					<div class="col-sm-8">
 						<span class="pull-right icon-pad-top">
-							<span ng-show="currEditLabel" >Edit Curriculum</span>
-							<span ng-show="currPDFLabel">Export to PDF</span>
 							<i class="fa fa-edit fa-md" ng-mouseenter="currEditLabel = true" ng-mouseleave="currEditLabel = false"></i>
 							<i class="fa fa-file-pdf-o fa-md" ng-mouseenter="currPDFLabel = true" ng-mouseleave="currPDFLabel = false"></i>
 						</span>
-
+						<br>
+						<br>
+						<span>
+							<p ng-show="currEditLabel" class="tip pull-right">Edit Curriculum</p>
+							<p ng-show="currPDFLabel" class="tip pull-right">Export to PDF</p>
+						</span>
 						<h4>Grades {{curriculum.lower_grade}}-{{curriculum.upper_grade}}, {{curriculum.tagline}}</h4>
 						<p>{{curriculum.description}}</p>
 						<span ng-show="notEmpty({{curriculum.tags}})" ng-repeat="tag in curriculum.tags">
@@ -57,8 +60,15 @@
 								</span>
 								<span class="icon-label">{{activity.category}}</span>
 							</div>
-							<div class="col-xs-7">
-								<h4>{{activity.name}}</h4>
+							<div class="col-xs-6">
+								<h4>
+									{{activity.name}}
+									<!-- Show link to video -->
+									<span ng-show="notEmpty('{{activity.video_url}}')">
+										<a href="{{activity.video_url}}" target="_blank" ><i class="btn fa fa-youtube-play fa-btn no-pad-vertical light-pad-right no-border" ng-mouseenter="videoLabel = true" ng-mouseleave="videoLabel = false"></i></a>
+										<span class="tip" ng-show="videoLabel">View video</span>
+									</span>
+								</h4>
 								<p class="notes">{{activity.teaching_notes}}<p>
 									<span ng-show="notEmpty({{activity.tags}})" ng-repeat="tag in activity.tags">
 										<img ng-src="{{tag.logo}}" alt="tag.name" class="img-thumbnail img-responsive">
@@ -67,30 +77,26 @@
 										<option value=''>Create new tag</option>
 									</select>
 									<i class="add-object btn fa fa-plus-circle fa-btn no-pad" id="new-tag" ng-mouseenter="newTagLabel = true" ng-mouseleave="newTagLabel = false" ng-click="newTag(curriculum, activity, addTag)"></i>
-									<span ng-show="newTagLabel">Add {{addTag.name || "new tag"}}</span>
+									<span ng-show="newTagLabel" class="tip">Add {{addTag.name || "new tag"}}</span>
 								</div>
-								<div class="col-xs-1">
+								<div class="col-xs-2">
 									<span class="pull-right icon-pad-top">
-										<span ng-show="notEmpty('{{activity.video_url}}')">
-											<a href="{{activity.video_url}}" target="_blank" ><i class="btn fa fa-youtube-play fa-btn" ng-mouseenter="videoLabel = true" ng-mouseleave="videoLabel = false"></i></a>
-										</span>
-										<span>
-											<!-- Open modal window with materials-->
-											<a><i class="btn fa fa-file-o fa-btn" ng-mouseenter="materialsLabel = true" ng-mouseleave="materialsLabel = false" ng-click="activityMaterials(activity.id, activity.materials, 'sm')"></i></a>
-										</span>
-										<span>
-											<!-- Open modal window with resources / helpful tips-->
-											<a><i class="btn fa fa-question-circle fa-btn" ng-mouseenter="resourcesLabel = true" ng-mouseleave="resourcesLabel = false" ng-click="activityResources(activity.id, activity.resources, 'sm')"></i></a>
-										</span>
-										<span>
-											<!-- TODO: Modal window with related activities. Can open in new window or jump to appropriate section-->
-											<a><i class="btn fa fa-plus fa-btn" ng-mouseenter="relatedLabel = true" ng-mouseleave="relatedLabel = false" ng-click="relatedActivities()"></i></a>
-										</span>
+										<!-- Open modal window with materials -->
+										<a><i class="fa fa-file-o fa-btn" ng-mouseenter="materialsLabel = true" ng-mouseleave="materialsLabel = false" ng-click="activityMaterials(activity.id, activity.materials, 'sm')"></i></a>
+										<!-- Open modal window with resources / helpful tips -->
+										<a><i class="fa fa-question-circle fa-btn" ng-mouseenter="resourcesLabel = true" ng-mouseleave="resourcesLabel = false" ng-click="activityResources(activity.id, activity.resources, 'sm')"></i></a>
+										<!-- TODO: Modal window with related activities. Can open in new window or jump to appropriate section -->
+										<a><i class="fa fa-plus fa-btn" ng-mouseenter="relatedLabel = true" ng-mouseleave="relatedLabel = false" ng-click="relatedActivities()"></i></a>
+										<i class="fa fa-edit fa-md" ng-mouseenter="activityEditLabel = true" ng-mouseleave="activityEditLabel = false"></i>
 									</span>
-									<span ng-show="materialsLabel">Materials</span>
-									<span ng-show="videoLabel">View video</span>
-									<span ng-show="resourcesLabel">Helpful hints</span>
-									<span ng-show="relatedLabel">Related activities</span>
+									<br>
+									<br>
+									<span>
+										<p ng-show="materialsLabel" class="tip pull-right">Lesson materials</p>
+										<p ng-show="resourcesLabel" class="tip pull-right">Helpful hints</p>
+										<p ng-show="relatedLabel" class="tip pull-right">Related lessons</p>
+										<p ng-show="activityEditLabel" class="tip pull-right">Edit activity</p>
+									</span>
 								</div>
 							</div>
 							<hr class="no-margin">
@@ -100,8 +106,8 @@
 								<select class="form-control" id="add-activity" ng-model="addActivity" ng-options="activity.name for activity in activities">
 									<option value=''>Create new activity</option>
 								</select>
-								<i class="add-object btn fa fa-plus-circle fa-btn" id="new-activity" ng-mouseenter="newActivityLabel = true" ng-mouseleave="newActivityLabel = false" ng-click="newActivity(curriculum, addActivity)"></i>
-								<span ng-show="newActivityLabel">Add {{addActivity.name || "new activity"}}</span>
+								<i class="add-object btn fa fa-plus-circle fa-btn no-pad" id="new-activity" ng-mouseenter="newActivityLabel = true" ng-mouseleave="newActivityLabel = false" ng-click="newActivity(curriculum, addActivity)"></i>
+								<span ng-show="newActivityLabel" class="tip">Add {{addActivity.name || "new activity"}}</span>
 							</div>
 						</div>
 					</accordion-group>
@@ -114,7 +120,10 @@
 	</div>
 
 <div class="container">
-	<i class="pull-right add-object btn fa fa-plus-circle fa-btn" ng-click="newCurriculum()"></i>
+	<span class="pull-right light-pad-vertical">
+	<span ng-show="newCurrLabel" class="tip">Add new curriculum</span>
+	<i class="pull-right add-object btn fa fa-plus-circle fa-btn no-pad-left no-pad-vertical" ng-mouseenter="newCurrLabel = true" ng-mouseleave="newCurrLabel = false" ng-click="newCurriculum()"></i>
+	</span>
 </div>
 
 </div>
