--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -82,13 +82,13 @@
 								<div class="col-xs-2">
 									<span class="pull-right icon-pad-top">
 										<!-- Open modal window with materials -->
-										<a><i class="fa fa-file-o fa-btn" ng-mouseenter="materialsLabel = true" ng-mouseleave="materialsLabel = false" ng-click="activityMaterials(activity.id, activity.materials, 'sm')"></i></a>
+										<a><i class="btn fa fa-file-o fa-btn no-border no-pad" ng-mouseenter="materialsLabel = true" ng-mouseleave="materialsLabel = false" ng-click="activityMaterials(activity.id, activity.materials, 'sm')"></i></a>
 										<!-- Open modal window with resources / helpful tips -->
-										<a><i class="fa fa-question-circle fa-btn" ng-mouseenter="resourcesLabel = true" ng-mouseleave="resourcesLabel = false" ng-click="activityResources(activity.id, activity.resources, 'sm')"></i></a>
+										<a><i class="btn fa fa-question-circle fa-btn no-border no-pad" ng-mouseenter="resourcesLabel = true" ng-mouseleave="resourcesLabel = false" ng-click="activityResources(activity.id, activity.resources, 'sm')"></i></a>
 										<!-- Open modal window with activity steps -->
-										<a><i class="fa fa-plus fa-btn" ng-mouseenter="stepLabel = true" ng-mouseleave="stepLabel = false" ng-click="activitySteps()"></i></a>
+										<a><i class="btn fa fa-plus fa-btn no-border no-pad" ng-mouseenter="stepLabel = true" ng-mouseleave="stepLabel = false" ng-click="activitySteps(activity.id, activity.steps, 'sm')"></i></a>
 										<!-- Open pre-populated modal window to edit activity -->
-										<i class="fa fa-edit fa-md" ng-mouseenter="activityEditLabel = true" ng-mouseleave="activityEditLabel = false"></i> 
+										<i class="btn fa fa-edit fa-md no-border no-pad" ng-mouseenter="activityEditLabel = true" ng-mouseleave="activityEditLabel = false"></i> 
 										<!-- REMOVED: Modal window with related activities. Can open in new window or jump to appropriate section -->
 										<!-- <a><i class="fa fa-plus fa-btn" ng-mouseenter="relatedLabel = true" ng-mouseleave="relatedLabel = false" ng-click="relatedActivities()"></i></a> -->
 									</span>
@@ -149,6 +149,7 @@
 	
 	<script src="{% static "js/app/controllers/controllers.js" %}"></script>
 	<script src="{% static "js/app/controllers/resource-controllers.js" %}"></script>
+	<script src="{% static "js/app/controllers/step-controllers.js" %}"></script>
 	<script src="{% static "js/app/controllers/material-controllers.js" %}"></script>
 	<script src="{% static "js/app/controllers/tag-controllers.js" %}"></script>
 	<script src="{% static "js/app/controllers/activity-controllers.js" %}"></script>
