changed 'lessons' to 'view lessons'

--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -44,7 +44,7 @@
 							<img ng-src="{{tag.logo}}" alt="tag.name" class="img-thumbnail img-responsive">
 						</span>
 					</div>
-					<accordion-group id="activity-group" heading="Lessons">
+					<accordion-group id="activity-group" heading="View lessons">
 					<div ng-repeat="activity in curriculum.activities">
 						<div class="row">
 							<div class="col-xs-offset-2 col-xs-2" ng-switch on="activity.category">
