--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -21,14 +21,14 @@
 			<div ng-repeat="curriculum in curricula | filter:query">
 
 				<div class="row">
-					<div class="col-xs-1 col-center icon-pad-top">
+					<div class="col-xs-1 col-center icon-pad">
 						<i class="fa fa-globe fa-lg"></i>
 					</div>
 					<div class="col-sm-3">
 						<h3 class="no-margin">{{curriculum.name}}</h3>
 					</div>
 					<div class="col-sm-8">
-						<span class="pull-right icon-pad-top">
+						<span class="pull-right icon-pad">
 							<i class="fa fa-edit fa-md" ng-mouseenter="currEditLabel = true" ng-mouseleave="currEditLabel = false"></i>
 							<i class="fa fa-file-pdf-o fa-md" ng-mouseenter="currPDFLabel = true" ng-mouseleave="currPDFLabel = false"></i>
 						</span>
@@ -50,13 +50,13 @@
 							<div class="col-xs-offset-2 col-xs-2" ng-switch on="activity.category">
 								<!-- Show appropriate logo for curriculum type -->
 								<span ng-switch-when="Offline">
-									<i class="fa fa-pencil fa-fw fa-md icon-pad-top"></i>
+									<i class="fa fa-pencil fa-fw fa-md icon-pad"></i>
 								</span>
 								<span ng-switch-when="Online">
-									<i class="fa fa-laptop fa-fw fa-md icon-pad-top"></i>
+									<i class="fa fa-laptop fa-fw fa-md icon-pad"></i>
 								</span>
 								<span ng-switch-when="Discussion">
-									<i class="fa fa-users fa-fw fa-md icon-pad-top"></i>
+									<i class="fa fa-users fa-fw fa-md icon-pad"></i>
 								</span>
 								<span class="icon-label">{{activity.category}}</span>
 							</div>
@@ -80,7 +80,7 @@
 									<span ng-show="newTagLabel" class="tip">Add {{addTag.name || "new tag"}}</span>
 								</div>
 								<div class="col-xs-2">
-									<span class="pull-right icon-pad-top">
+									<span class="pull-right icon-pad">
 										<!-- Open modal window with materials -->
 										<a><i class="btn fa fa-file-o fa-btn no-border no-pad" ng-mouseenter="materialsLabel = true" ng-mouseleave="materialsLabel = false" ng-click="activityMaterials(activity.id, activity.materials, 'sm')"></i></a>
 										<!-- Open modal window with resources / helpful tips -->
@@ -107,7 +107,7 @@
 						</div>
 						<div class="container row">
 							<div class="col-xs-offset-4 col-xs-8">
-								<select class="form-control" id="add-activity" ng-model="addActivity" ng-options="activity.name for activity in activities">
+								<select class="form-control light-margin-vertical" id="add-activity" ng-model="addActivity" ng-options="activity.name for activity in activities">
 									<option value=''>Create new activity</option>
 								</select>
 								<i class="add-object btn fa fa-plus-circle fa-btn no-pad" id="new-activity" ng-mouseenter="newActivityLabel = true" ng-mouseleave="newActivityLabel = false" ng-click="newActivity(curriculum, addActivity)"></i>
