--- a/static/partials/new-activity.html
+++ b/static/partials/new-activity.html
@@ -10,7 +10,7 @@
 	<div class="no-pad fixed">
 		<div class="modal-header">
 			<h3 class="modal-title">
-				Create New Activity
+				Create New Lesson
 				<button class="btn btn-warning pull-right" ng-click="cancel()">Cancel</button>
 			</h3>
 
@@ -53,7 +53,7 @@
 				</div>
 				<br>
 				<br>
-				<button class="btn btn-primary pull-right" ng-click="save()">Add Activity</button>
+				<button class="btn btn-primary pull-right" ng-click="save()">Add Lesson</button>
 				<br>
 				<br>
 				<p class="error">{{errors}}</p>
