--- a/static/css/style.css
+++ b/static/css/style.css
@@ -134,7 +134,11 @@ button {
   width: 570px;
 }
 
-#new-activity-form, #edit-activity-form .form-fixed-width {
+#new-activity-form .form-fixed-width {
+  width: 570px;
+}
+
+#edit-activity-form .form-fixed-width {
   width: 570px;
 }
 
